--- a/homepage.html
+++ b/homepage.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>מערכת דיווח נוכחות - וולקני</title>
+    <title>מערכת דיווח שעות - וולקני</title>
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
         body { font-family: 'Arial', sans-serif; background-color: #f5f5f5; direction: rtl; line-height: 1.6; }
