--- a/homepage.html
+++ b/homepage.html
@@ -96,7 +96,7 @@
 <body>
     <div class="header">
         <div class="user-icon" onclick="showScreen('user-profile')">👤</div>
-        <h1>ניי שרייר - המרכזת גורמי אנוש</h1>
+        <h1>מערכת דיווח שעות - וולקני</h1>
         <div class="header-actions">
             <div onclick="showScreen('main')" style="cursor: pointer;">🏠</div>
             <button id="logout-btn" onclick="logout()" style="display:none; background:#ef4444; color:white; border: 1px solid #ef4444; padding:6px 10px; border-radius:6px; cursor:pointer;">התנתק</button>
