--- a/homepage.html
+++ b/homepage.html
@@ -169,7 +169,7 @@
         <div class="form-group"><label>שם פרטי:</label><input type="text" id="profile-first-name" readonly style="background-color: #f9fafb;"></div>
         <div class="form-group"><label>שם משפחה:</label><input type="text" id="profile-last-name" readonly style="background-color: #f9fafb;"></div>
         <div class="form-group"><label>תפקיד:</label><input type="text" id="profile-position" readonly style="background-color: #f9fafb;"></div>
-        <div class="form-group"><label>Email:</label><input type="email" id="profile-email" readonly style="background-color: #f9fafb;"></div>
+        <div class="form-group"><label>אי-מייל:</label><input type="email" id="profile-email" readonly style="background-color: #f9fafb;"></div>
         <div class="form-group"><label>סיסמה:</label><input type="password" id="profile-password" value="************" readonly style="background-color: #f9fafb;"></div>
         <button class="btn" onclick="editProfile()">ערוך</button>
     </div>
