--- a/admin-dashboard/index.html
+++ b/admin-dashboard/index.html
@@ -59,15 +59,15 @@
           </div>
         </div>
 
-        <div class="card" id="kpi-total-hours" hidden>
+        <div class="card" id="kpi-total-hours">
           <div class="card-header"><h2>סה"כ שעות (חודש נבחר)</h2></div>
           <div style="font-size:28px; font-weight:700;"> <span id="kpi-hours">0</span> </div>
         </div>
-        <div class="card" id="kpi-users" hidden>
+        <div class="card" id="kpi-users">
           <div class="card-header"><h2>מספר עובדים</h2></div>
           <div style="font-size:28px; font-weight:700;"> <span id="kpi-users-count">0</span> </div>
         </div>
-        <div class="card" id="kpi-entries" hidden>
+        <div class="card" id="kpi-entries">
           <div class="card-header"><h2>מספר רשומות דיווח</h2></div>
           <div style="font-size:28px; font-weight:700;"> <span id="kpi-entries-count">0</span> </div>
         </div>
@@ -76,7 +76,7 @@
         <h2>נדרש להתחבר</h2>
         <p>התחברו כדי לגשת לנתונים.</p>
         <div class="actions">
-          <button id="signin-btn-main" class="btn primary">התחברות באמצעות Google</button>
+          <button id="signin-btn-main" class="btn primary">התחברות</button>
         </div>
       </section>
 
@@ -158,7 +158,6 @@
               <thead>
                 <tr>
                   <th>עובד</th>
-                  <th>UID</th>
                   <th>תאריך</th>
                   <th>חוקר/משימה</th>
                   <th>שעות</th>
