Fix HTML formatting issues in index.html

--- a/admin-dashboard/index.html
+++ b/admin-dashboard/index.html
@@ -53,7 +53,7 @@
             </div>
             <label style="display:flex; gap:8px; align-items:center;">
               <input type="checkbox" id="allocate-others" checked />
-              חלוקת "משימה אחרות" בין החוקרים הפעילים של העובד
+              חלוקת "משימות אחרות" בין החוקרים הפעילים של העובד
             </label>
             <button id="apply-filters" class="btn">רענון</button>
           </div>
@@ -148,4 +148,5 @@
     <script type="module" src="./app.js"></script>
   </body>
   </html>
+
 
