--- a/homepage.html
+++ b/homepage.html
@@ -1159,7 +1159,7 @@
             <div id="login-messages"></div>
             <form id="signin-form">
                 <div class="form-group">
-                    <label>Email:</label>
+                    <label>אימייל ארגוני:</label>
                     <input type="email" id="login-email" required>
                 </div>
                 <div class="form-group">
