--- a/homepage.html
+++ b/homepage.html
@@ -1189,7 +1189,7 @@
             <h3 style="text-align: center; margin-bottom: 20px;">שחזור סיסמה</h3>
             <div id="forgot-password-messages"></div>
             <form id="reset-password-form">
-                <div class="form-group"><label>Email:</label><input type="email" id="reset-email" required></div>
+                <div class="form-group"><label>אימייל ארגוני:</label><input type="email" id="reset-email" required></div>
                 <button type="submit" class="btn">שלח קישור לשחזור</button>
                 <a href="#" class="back-to-login" onclick="backToLogin()">חזרה להתחברות</a>
             </form>
