--- a/homepage.html
+++ b/homepage.html
@@ -1481,7 +1481,7 @@
 
             <div id="add-researcher-form" class="add-researcher-form">
                 <div class="add-researcher-row">
-                    <input type="text" id="new-researcher-name" placeholder="הזן שם החוקר החדש..." maxlength="50">
+                    <input type="text" id="new-researcher-name" placeholder="יש להזין את שם החוקר.ת החדש.ה ..." maxlength="50">
                     <button class="btn-add" onclick="addNewResearcher()">
                         <span class="material-symbols-outlined">add</span>
                         הוספה
