--- a/homepage.html
+++ b/homepage.html
@@ -1613,7 +1613,7 @@
             <label>שנה:</label>
             <select id="report-year"></select>
         </div>
-        <button class="btn" onclick="generateReport()">הצג דו"ח</button>
+        <button class="btn" onclick="generateReport()">הצגת דו"ח</button>
         <div id="report-results" style="margin-top: 30px;"></div>
     </div>
 
