Update about section and footer text in homepage

--- a/homepage.html
+++ b/homepage.html
@@ -1497,7 +1497,7 @@
         <h2 style="text-align: center; margin-bottom: 30px;">אודות המערכת</h2>
         <div class="about-content" style="max-width: 800px; margin: 0 auto; padding: 20px; background: white; border-radius: 10px; box-shadow: 0 4px 20px rgba(0,0,0,0.1);">
             <div style="text-align: center; margin-bottom: 30px;">
-                <h3 style="color: #1e3a8a; margin-bottom: 10px;">מערכת דיווח שעות - המכון להנדסת מערכות חקלאיות וביולוגיות מערכת דיווח שעות - וולקני</h3>
+                <h3 style="color: #1e3a8a; margin-bottom: 10px;">מערכת דיווח שעות - המכון להנדסת מערכות חקלאיות וביולוגיות </h3>
                 <p style="color: #6b7280; font-size: 16px;">מערכת מתקדמת לניהול דיווחי שעות עבודה</p>
             </div>
             
@@ -1554,7 +1554,7 @@
             </div>
 
             <div style="text-align: center; margin-top: 30px; padding-top: 20px; border-top: 1px solid #e5e7eb;">
-                <p style="color: #6b7280; font-size: 14px;">© 2025 מערכת דיווח שעות - וולקני. כל הזכויות שמורות.</p>
+                <p style="color: #6b7280; font-size: 14px;">© 2025 כל הזכויות שמורות.</p>
             </div>
         </div>
     </div>
